Add minio for national card id upload
